[gd_scene load_steps=3 format=2]

[ext_resource path="res://enviroment/star_move/stars_move.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 600, 760, 0, 0, 0, 0, 0, 760, 0, 0, 0, 0, 0, 0 )
}

[node name="stars_move" type="Node"]
script = ExtResource( 1 )

[node name="timer_stars" type="Timer" parent="."]
wait_time = 0.1

[node name="path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="star_pos" type="PathFollow2D" parent="path"]

[connection signal="timeout" from="timer_stars" to="." method="_on_timer_stars_timeout"]
